--- a/install-snuglinux.conf
+++ b/install-snuglinux.conf
@@ -4,6 +4,8 @@ LOG_FILE='/var/log/install-snuglinux.log'
 # list of languages
 LIST_LANG="en ru uk"
 
+LINUX_VER="-lts"
+
 # Color scheme
 FC_0="\e[0m"
 FC_1="\e[0;30m" # Black
