--- a/ARCH/PKGBUILD
+++ b/ARCH/PKGBUILD
@@ -1,14 +1,14 @@
 pkgname=install-snuglinux
-pkgver=0.0.20
+pkgver=0.0.23
 pkgrel=1
 pkgdesc="Console script to install and configure distribution snuglinux"
 arch=('any')
 url="https://github.com/snuglinux/install-snuglinux"
 license=('GPL2')
-depends=("openssl" "grep")
+depends=("openssl" "grep" "sed" "wget" "expect")
 source=("https://github.com/snuglinux/${pkgname}/archive/${pkgver}.tar.gz")
 backup=('etc/install-snuglinux.conf')
-md5sums=('de4d0b42ffd2e94fa83003413788f135')
+md5sums=('2b65e8a05b74a5d4660558d34bb11c8e')
 
 package(){
   cd "$srcdir/${pkgname}-$pkgver"
