--- a/ARCH/PKGBUILD
+++ b/ARCH/PKGBUILD
@@ -1,14 +1,14 @@
 pkgname=install-snuglinux
-pkgver=0.0.24
+pkgver=0.0.25
 pkgrel=1
 pkgdesc="Console script to install and configure distribution snuglinux"
 arch=('any')
 url="https://github.com/snuglinux/install-snuglinux"
 license=('GPL2')
-depends=("openssl" "grep" "sed" "wget" "expect")
+depends=("openssl" "grep" "sed" "wget" "pacutils")
 source=("https://github.com/snuglinux/${pkgname}/archive/${pkgver}.tar.gz")
 backup=('etc/install-snuglinux.conf')
-md5sums=('3aa4b115eee4fbc76eacfe886abf36ff')
+md5sums=('34fa7b905e7ecbbeb6451d8188408322')
 
 package(){
   cd "$srcdir/${pkgname}-$pkgver"
