--- a/install-snuglinux.conf
+++ b/install-snuglinux.conf
@@ -6,6 +6,9 @@ LIST_LANG="en ru uk"
 
 LINUX_VER="-lts"
 
+# do not revise the server certificate
+NO_CHECK_CERTIFICATE=0
+
 # Color scheme
 FC_0="\e[0m"
 FC_1="\e[0;30m" # Black
