--- a/install-snuglinux.conf
+++ b/install-snuglinux.conf
@@ -6,8 +6,8 @@ LIST_LANG="en ru uk"
 
 LINUX_VER="-lts"
 
-# do not revise the server certificate
-NO_CHECK_CERTIFICATE=0
+# protocol type https or http
+PROTOCOL_TYPE='https'
 
 # Color scheme
 FC_0="\e[0m"
