--- a/mkinitcpio/hooks-udev.conf
+++ b/mkinitcpio/hooks-udev.conf
@@ -1,1 +1,1 @@
-HOOKS=(base udev autodetect microcode modconf kms keyboard keymap consolefont block filesystems fsck)
+HOOKS=(base udev autodetect microcode modconf kms keyboard keymap consolefont block encrypt lvm2 filesystems fsck)
